# ChatroomServer

./: .gitignore  CMakeLists.txt  README.md  chatroom_server_architecture.md  docker-compose.yml  post_login.lua  单 Reactor 模式流程.MD
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt  chat_application.cpp  chat_application.hpp  chat_server.cpp  chatroom_server.cpp  chatroom_server.hpp  chatroom_server_epoll.cpp  chatroom_server_epoll.hpp  main.cpp
src/chat/: chat_manager.cpp  chat_manager.hpp  chat_room.cpp  chat_room.hpp  chat_user_manager.cpp  chat_user_manager.hpp  user.cpp  user.hpp
src/db/: database_manager.cpp  database_manager.hpp
src/http/: connection.cpp  connection.hpp  event_loop.cpp  event_loop.hpp  http_request.cpp  http_request.hpp  http_response.cpp  http_response.hpp  http_server.cpp  http_server.hpp  reactor_server.cpp  reactor_server.hpp  socket_compat.hpp
src/reactor/: channel.cpp  channel.hpp  epoller.cpp  epoller.hpp  event_loop.cpp  event_loop.hpp  select_poller.hpp
src/user/: user_manager.cpp  user_manager.hpp
src/utils/: kafka_producer.cpp  kafka_producer.hpp  logger.cpp  logger.hpp  thread_pool.cpp  thread_pool.hpp  timer.cpp  timer.hpp  work_stealing_thread_pool.cpp  work_stealing_thread_pool.hpp
static/: chat.html  chat.js  index.html  login.html
tests/: CMakeLists.txt  test_utils.cpp
